fixed article text going off page on mobile

--- a/styles.css
+++ b/styles.css
@@ -486,7 +486,7 @@ button {
     margin-top: 180px;
     line-height: 28px;
     min-height: 60vh;
-    min-width: 400px;
+    min-width: 500px;
     max-width: 1600px;
     text-align: center;
     margin-left: auto;
